fix: z-index with split view overlay

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,7 +10,7 @@ div#magane {
 	flex-direction: row;
 	height: 44px;
 	position: absolute;
-	z-index: 99;
+	z-index: 100;
 
 	button, input, select, label, span, p, a, li, ul, div {
 		font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
